<?xml version="1.0"?>
<package format="2">
  <name>tmr_listener</name>
  <version>0.4.0</version>
  <description>The tmr_listener package</description>

  <maintainer email="jacky.tseng@gyro.com">Jacky Tseng</maintainer>
  <author email="jacky.tseng@gyro.com">Jacky Tseng</author>
  <license>TODO</license>

  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>

  <build_depend>message_generation</build_depend>
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <exec_depend>message_runtime</exec_depend>

  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>
</package>
