add_library(tmr_listener tmr_listener.cpp tmr_listener_handle.cpp)
target_compile_definitions(tmr_listener PUBLIC FUSION_MAX_VECTOR_SIZE=20)
target_link_libraries(tmr_listener PUBLIC tmr_tcp_comm tmr_ext_script project_warnings project_options)

add_executable(tmr_listener_node tmr_listener_node.cpp)
target_link_libraries(tmr_listener_node PUBLIC tmr_listener)
